--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "balena-sdk": "^11.2.0",
     "body-parser": "^1.18.3",
+    "node-schedule": "^1.3.1",
     "truthy": "0.0.1"
   }
 }
